--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">@color/Main</color>
+    <color name="purple_500">@color/Main</color>
+    <color name="purple_700">@color/Main</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="colorPrimary">#E0E0E0</color>
-    <color name="colorPrimaryDark">#FBB8AC</color>
-    <color name="colorAccent">#FEDBD0</color>
-    <color name="blueliketwitter" >#4169e1</color>
+    <color name="colorPrimaryDark">#009688</color>
+    <color name="colorAccent">#4DD0E1</color>
+    <color name="blueliketwitter" >#4DD0E1</color>
     <color name="textColorPrimary">#442C2E</color>
     <color name="toolbarIconColor">@color/textColorPrimary</color>
     <color name="loginPageBackgroundColor">#FFFFFF</color>
     <color name="productGridBackgroundColor">#FFFBFA</color>
-    <color name="textInputOutlineColor">#FBB8AC</color>
+    <color name="textInputOutlineColor">@color/Main</color>
+
     <color name="white">#FFFFFFFF</color>
 
+
+<color name = "muesli_green" >#298b28</color>
+
+
+    <!--  color pallete-->
+    <color name ="Main">#009688</color>
+    <color name ="optional">#00897B</color>
+    <color name ="Secondary">#4DD0E1</color>
+    <color name="redWarning">#F81302</color>
 
 
 </resources>
