--- a/app/src/main/res/layout/fragment_display_transactions_landing.xml
+++ b/app/src/main/res/layout/fragment_display_transactions_landing.xml
@@ -7,21 +7,48 @@
     tools:context=".displaytransactions.DisplayTransactionsLandingFragment">
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+       android:orientation="vertical"
+        android:layout_marginTop="79dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
+
+
+        <ImageView
+            android:id="@+id/records_showroom_imageview"
+            android:layout_width="309dp"
+            android:layout_height="280dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/background_border_animated"
+            android:contentDescription="@string/sm_logo"
+            app:srcCompat="@drawable/ic_drawing2" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:elevation="3dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingStart="16dp"
+                android:text="@string/click_button_toView_record_transactions"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:elevation="3dp">
 
             <com.google.android.material.button.MaterialButton
@@ -31,7 +58,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:text="@string/clear" />
+                android:layout_marginEnd="32dp"
+                android:text="Button"
+                app:icon="@drawable/background_border_animated" />
         </RelativeLayout>
     </LinearLayout>
 
