--- a/app/src/main/res/layout/fragment_main_transactor.xml
+++ b/app/src/main/res/layout/fragment_main_transactor.xml
@@ -9,24 +9,23 @@
     android:id="@+id/main_transactor_layout"
     >
 
-
+    <!--
     <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:elevation="0dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <androidx.appcompat.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
         style="@style/Widget.Shrine.Toolbar2"
-
-        android:id="@+id/app_bar"
+            android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="56dp"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        />
 
-    </com.google.android.material.appbar.AppBarLayout>
 
+    </com.google.android.material.appbar.AppBarLayout>
+-->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -111,7 +110,6 @@
                 android:textColorHint="@color/textColorPrimary"
                 android:id="@+id/input_customerphone_id"
              >
-
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -120,12 +118,10 @@
                     android:textColor="@color/black"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp">
-
                 <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/transactiontype_id"
                     style="@style/TextAppearance.Shrine.justText"
@@ -146,7 +142,6 @@
                 android:layout_marginTop="12dp"
                 app:endIconMode="clear_text"
                     app:endIconTint="@color/black"
-
                 app:endIconDrawable="@drawable/black_cancel"
                 android:hint="@string/amount">
                 <com.google.android.material.textfield.TextInputEditText
@@ -158,7 +153,6 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -175,5 +169,4 @@
             </RelativeLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </FrameLayout>
