--- a/app/src/main/res/layout/fragment_manage_user_landing.xml
+++ b/app/src/main/res/layout/fragment_manage_user_landing.xml
@@ -7,22 +7,51 @@
     tools:context=".manageuser.ManageUserLandingFragment">
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:orientation="vertical"
+        android:layout_marginTop="79dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
+
+        <ImageView
+            android:id="@+id/user_showroom_imageview"
+            android:layout_width="309dp"
+            android:layout_height="280dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/background_border_animated"
+            android:contentDescription="@string/sm_logo"
+            app:srcCompat="@drawable/ic_drawing2" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-
             android:elevation="3dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingStart="16dp"
+                android:text="Click Button to Manage User Accounts"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:elevation="3dp">
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/users_door_btn"
                 style="@style/Widget.Shrine.Button"
@@ -30,9 +59,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:text="@string/clear" />
+                android:layout_marginEnd="32dp"
+                android:text="Button"
+
+                />
         </RelativeLayout>
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
