--- a/app/src/main/res/layout/fragment_manage_p_d_fs_landing.xml
+++ b/app/src/main/res/layout/fragment_manage_p_d_fs_landing.xml
@@ -26,7 +26,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp">
+        app:elevation="2dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/app_bar"
@@ -48,16 +48,16 @@
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
         android:background="@color/productGridBackgroundColor"
-        android:elevation="8dp"
+        android:elevation="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
+            android:paddingTop="34dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
+            android:layout_height="match_parent"
+            />
     </androidx.core.widget.NestedScrollView>
-
 </FrameLayout>
 
 
