--- a/app/src/main/res/layout/fragment_user_accounts.xml
+++ b/app/src/main/res/layout/fragment_user_accounts.xml
@@ -28,16 +28,18 @@
 
             />
 
-           <com.google.android.material.button.MaterialButton
+           <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_acc_btn"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
-               android:text="@string/add_account"
+               android:src="@drawable/add_icon"
                android:layout_below="@id/recycler_view"
-               android:layout_marginTop="64dp"/>
+               android:layout_marginTop="64dp"
+                android:layout_marginEnd="32dp"
+               />
        </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 
