--- a/app/src/main/res/layout/signaturepad_home.xml
+++ b/app/src/main/res/layout/signaturepad_home.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
     android:orientation="vertical"
     style="@style/Widget.Shrine.PopUpBackdrop">
 
@@ -130,3 +135,4 @@
             android:text="@string/shr_button_cancel" />
     </RelativeLayout>
 </LinearLayout>
+</androidx.core.widget.NestedScrollView>
