--- a/app/src/main/res/menu/show_transactions_menu.xml
+++ b/app/src/main/res/menu/show_transactions_menu.xml
@@ -9,6 +9,14 @@
         app:showAsAction="always"
         android:title="search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
+    <item
+        android:id="@+id/sync"
+        android:icon="@drawable/swap_icon"
+        app:showAsAction="always"
+        android:title="sync"
+        />
+
     <group
         android:checkableBehavior ="none">
         <item
