--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,6 +18,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="ThemeOverlay.DigiBooklet.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_900</item>
+        <item name="fullscreenTextColor">@color/light_blue_A400</item>
+    </style>
+
     <!-- SplashScreen theme. -->
 
 </resources>
