--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,4 +40,16 @@
         <item name="android:windowBackground">@drawable/splashscreenbackground</item>
     </style>
 
+    <style name="ThemeOverlay.DigiBooklet.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
+
+    <style name="Theme.Shrinetutor2.Fullscreen" parent="Theme.Shrinetutor2">
+        <item name="android:actionBarStyle">@style/Widget.Theme.Shrinetutor2.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
 </resources>
