--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,3 @@
-
 <resources xmlns:tools="http://schemas.android.com/tools"
 
     >
@@ -18,7 +17,7 @@
     <style name="Widget.Shrine.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
 
-        <item name ="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="boxStrokeColor">@color/textInputOutlineColor</item>
     </style>
@@ -60,9 +59,8 @@
         <item name="android:textColor">@color/black</item>
 
 
+    </style>
 
-
-</style>
     <style name="TextAppearance.Shrine.actionableText" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
@@ -75,8 +73,6 @@
     </style>
 
 
-
-
     <style name="Widget.Shrine.Toolbar2" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">@color/white</item>
         <item name="android:theme">@style/Theme.Shrine</item>
@@ -87,7 +83,8 @@
     <style name="Widget.Shrine.PopUpBackdrop" parent="">
         <item name="android:background">@color/optional</item>
     </style>
-// for UserProfile Fragments...
+    // for UserProfile Fragments...
+
     <style name="Widget.Shrine.Toolbar_for_UserProfile" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">?attr/colorAccent</item>
         <item name="android:theme">@style/Theme.Shrine</item>
@@ -97,40 +94,41 @@
 
     <style name="TextAppearance.Shrine.Toolbar_for_UserProfile" parent="TextAppearance.MaterialComponents.Button">
         <item name="android:textSize">16sp</item>
-        <item name ="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
 
     </style>
 
-//Show transactions header
-    <style name = "TextAppearance.MomoBooklet.tableHeader" parent="">
+    //Show transactions header
+
+    <style name="TextAppearance.MomoBooklet.tableHeader" parent="">
 
         <item name="android:textAllCaps">true</item>
         <item name="android:textAlignment">viewStart</item>
-        <item name ="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
 
 
     </style>
 
     //Show transaction field
-    <style name = "TextAppearance.MomoBooklet.record_attrs" parent="">
-    <item name="android:textAllCaps">true</item>
-    <item name="android:textAlignment">viewStart</item>
 
-    <item name ="android:textColor">@color/black</item>
+    <style name="TextAppearance.MomoBooklet.record_attrs" parent="">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">viewStart</item>
+
+        <item name="android:textColor">@color/black</item>
     </style>
-
-
 
 
     <style name="TextAppearance.Shrine.Title" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
-        <item name ="android:fontFamily">@font/artifika</item>
+        <item name="android:fontFamily">@font/artifika</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Widget.MoMoBooklet.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="hintTextAppearance">@style/TextAppearance.MoMoBooklet.TextInputLayout.HintText</item>
+        <item name="hintTextAppearance">@style/TextAppearance.MoMoBooklet.TextInputLayout.HintText
+        </item>
         <item name="hintTextColor">@color/textColorPrimary</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="shapeAppearanceOverlay">
@@ -150,33 +148,42 @@
         <item name="cornerSize">32dp</item>
     </style>
 
-    <style name ="Widget.MoMoBooklet.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
+    <style name="Widget.MoMoBooklet.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@color/Main</item>
     </style>
+
     <style name="Widget.MoMoBooklet.Toolbar2" parent="Widget.AppCompat.Toolbar">
-    <item name="android:background">@color/white</item>
-    <item name="android:theme">@style/Theme.Shrinetutor2</item>
-    <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:theme">@style/Theme.Shrinetutor2</item>
+        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
 
     <style name="TextAppearance.MoMoBooklet.Commision" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
-        <item name ="android:fontFamily">@font/artifika</item>
+        <item name="android:fontFamily">@font/artifika</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name ="Widget.MoMoBooklet.Chip.Selected" parent="">
-    <item name = "android:backgroundTint">@color/cerise</item>
-        <item name = "android:textColor">@color/white</item>
+    <style name="Widget.MoMoBooklet.Chip.Selected" parent="">
+        <item name="android:backgroundTint">@color/cerise</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
+    <style name="Widget.MoMoBooklet.Chip.Unselected" parent="">
+        <item name="android:backgroundTint">@color/lightGray</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
-    <style name ="Widget.MoMoBooklet.Chip.Unselected" parent="">
-        <item name = "android:backgroundTint">@color/lightGray</item>
-        <item name = "android:textColor">@color/black</item>
+    <style name="Widget.Theme.Shrinetutor2.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/black_overlay</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    </style>
+
+    <style name="Widget.Theme.Shrinetutor2.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
     </style>
 
 </resources>
