added swipe to delete for user accounts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
 
     <color name="hotpink">#FFBEDE</color>
     <color name="cardinal">#C41e3a</color>
-    <color name="cerise">#DE3163</color>
+    <color name="cerise"></color>
     <color name="Pearl">#E7ACCF</color>
     <color name="lightGray">#e4e4e4ff</color>
 
