--- a/app/src/main/res/layout/user_profile_card.xml
+++ b/app/src/main/res/layout/user_profile_card.xml
@@ -63,82 +63,18 @@
         />
     </LinearLayout>
 
-        <!--RelativeLayout
-            android:layout_marginTop="4dp"
-
-            android:layout_width="wrap_content"
-            android:layout_height="67dp"
-            android:layout_weight="0.10"
-            android:background="@drawable/border_green_circle">
-            <ImageView
-                android:id="@+id/delete_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:contentDescription="deletes a user"
-                android:padding="6dp"
-                app:srcCompat="@drawable/delete_icon"
-                tools:ignore="ImageContrastCheck" />
-        </RelativeLayout-->
         <ImageView
-            android:layout_width="0dp"
             android:id="@+id/Incontrol_status"
-            android:layout_height="64dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="16dp"
             android:layout_weight="0.15"
-            app:srcCompat="@drawable/beeping_radio_btn"
-            android:contentDescription="@string/mainman"  />
+            android:contentDescription="@string/mainman"
+            app:srcCompat="@drawable/beeping_radio_btn" />
 
-        <!--RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.10">
-            <ImageView
-                android:id="@+id/collapse_arrow"
-                android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_gravity="start"
-                android:layout_marginBottom="16dp"
-                android:contentDescription="collapses profile card"
-                app:srcCompat="@drawable/collapsible_right"
-                tools:ignore="ImageContrastCheck"/>
-        </RelativeLayout-->
     </LinearLayout>
-        <!--RelativeLayout
-            android:id="@+id/user_profile_relatLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:elevation="3dp"
-            android:visibility="gone">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/user_profile_edit_btn"
-                style="@style/Widget.Shrine.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:paddingEnd="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_alignParentRight="true"
-                android:text="@string/edit" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/user_profile_give_control_btn"
-                style="@style/Widget.Shrine.Button"
-                android:layout_width="wrap_content"
-                android:paddingStart="16dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginEnd="147dp"
-                android:layout_marginRight="12dp"
-                android:layout_toStartOf="@+id/user_profile_edit_btn"
-                android:drawableLeft="@drawable/ic_baseline_control_point_24"
-                android:elevation="3dp"
-                android:text="@string/give_control" />
-        </RelativeLayout-->
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
