Transaction dow/upload use cases done

--- a/app/src/main/res/menu/show_transactions_menu.xml
+++ b/app/src/main/res/menu/show_transactions_menu.xml
@@ -10,12 +10,12 @@
         android:title="search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
-    <!--<item
+    <item
         android:id="@+id/sync"
         android:icon="@drawable/swap_icon"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:title="sync"
-        />-->
+        />
 
     <group
         android:checkableBehavior ="none">
